# electricity-demand-forecasting

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
dbt/electricity_demand/: dbt_project.yml
dbt/electricity_demand/macros/: generate_schema_name.sql
dbt/electricity_demand/models/marts/: _marts.yml  _sources.yml  agg_prediction_accuracy_daily.sql  dim_balancing_authority.sql  dim_calendar.sql  fct_demand.sql  (+1 more)
dbt/electricity_demand/seeds/: balancing_authorities.csv  calendar_dates.csv
docker/: serving.Dockerfile
frontend/: .env.example  README.md  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AccuracyChart.tsx  ForecastChart.tsx  ForecastDemo.tsx  ModelInfoCard.tsx  SeriesPicker.tsx
frontend/lib/: api.ts  types.ts
infra/terraform/: README.md  main.tf  variables.tf
src/electricity_demand/: config.py
src/electricity_demand/data_engineering/: balancing_authorities.py  bigquery_merge.py  build_seeds.py  dbt_runner.py  eia_client.py  ingest_eia.py  ingest_weather.py  local_store.py  weather_client.py
src/electricity_demand/models/: baseline.py  evaluate.py  features.py  train.py
src/electricity_demand/monitoring/: drift_check.py  retrain_trigger.py
src/electricity_demand/pipelines/: components.py  queries.py  submit_pipeline.py  training_pipeline.py
src/electricity_demand/serving/: app.py  backfill_predictions.py  batch_predict.py
tests/: test_backfill_predictions.py  test_baseline.py  test_batch_predict.py  test_build_seeds.py  test_drift_check.py  test_eia_client.py  test_evaluate.py  test_features.py  test_local_store.py  test_pipeline_queries.py  test_retrain_trigger.py  test_serving_app.py  test_submit_pipeline.py  test_train.py  test_training_pipeline.py  test_weather_client.py
(+4 files in other folders)
