[project]
name = "electricity-demand"
version = "0.1.0"
description = "Electricity demand forecasting: ML, training pipelines, MLOps, and data engineering on GCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "requests>=2.32",
]

[project.optional-dependencies]
gcp = [
    "google-cloud-bigquery>=3.25",
    "google-cloud-storage>=2.18",
    "db-dtypes>=1.2",
]
dbt = [
    "dbt-bigquery>=1.11.3",
]
ml = [
    "lightgbm>=4.3",
    "scikit-learn>=1.5",
]
pipelines = [
    # Pinned exact, not >=: KFP bakes the SDK version used to *compile* a
    # pipeline into the spec, and each component reinstalls that exact
    # version at runtime inside the container to match. Dockerfile's plain
    # `pip install` doesn't read uv.lock, so an unpinned range let the image
    # resolve a newer kfp than local dev's locked version - the runtime
    # version-swap silently broke the run-dbt-transform component (found via
    # a real Vertex AI pipeline submission, zero container logs emitted).
    "kfp==2.16.1",
    "google-cloud-aiplatform>=1.60",
]
serving = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
]
notebook = [
    "matplotlib>=3.9",
    "jupyter>=1.0",
    "nbconvert>=7.16",
    "ipykernel>=6.29",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "httpx>=0.27",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/electricity_demand"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
